--- a/kozhevnikov/lesson8/package.json
+++ b/kozhevnikov/lesson8/package.json
@@ -20,7 +20,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.6",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
