--- a/kozhevnikov/lesson82/package.json
+++ b/kozhevnikov/lesson82/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "node-mongo-app",
+  "name": "lesson_8",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "express.js",
   "scripts": {
-    "start": "node index",
-    "dev": "nodemon index"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon express.js"
   },
   "keywords": [],
   "author": "",
@@ -15,14 +15,15 @@
     "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-handlebars": "^3.1.0",
     "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.13",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.10.11",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^3.0.0"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1"
+    "nodemon": "^2.0.6"
   }
 }
